@@ -17,7 +17,7 @@ Recommends: at, curl | wget, dctrl-tools, debian-keyring, debian-maintainers,
  dput | dupload, equivs, fakeroot, gnupg, libcrypt-ssleay-perl,
  libparse-debcontrol-perl, libsoap-lite-perl, liburi-perl, libwww-perl,
  lintian, lsb-release, man-db, patch, patchutils, strace, unzip,
- wdiff, lzma, xz-utils, sensible-utils, libjson-perl
+ wdiff, xz-utils, sensible-utils, libjson-perl
 Suggests: bsd-mailx | mailx, build-essential, cvs-buildpackage, devscripts-el,
  gnuplot, libauthen-sasl-perl, libtimedate-perl, libfile-desktopentry-perl,
  libnet-smtp-ssl-perl, libterm-size-perl, libyaml-syck-perl, mutt, ssh-client,
@@ -117,7 +117,7 @@ Description: scripts to make the life of a Debian Package maintainer easier
     transitions for which uploads to unstable are currently blocked
     [libwww-perl, libyaml-syck-perl]
   - uscan: scan upstream sites for new releases of packages
-    [libcrypt-ssleay-perl, libwww-perl, unzip, lzma, xz-utils]
+    [libcrypt-ssleay-perl, libwww-perl, unzip, xz-utils]
   - uupdate: integrate upstream changes into a source package [patch]
   - whodepends: check which maintainers' packages depend on a package
   - who-uploads: determine the most recent uploaders of a package to the Debian
