@@ -10,6 +10,10 @@ devscripts (2.10.72) UNRELEASED; urgency=low
     from debian/control completely.  (Closes: #605102, #610310, LP: #485264)
   * uscan: Let unzip convert text files to native line endings when repacking.
     Thanks to Daniel Kahn Gilmor for the suggestion.  (Closes: #618513)
+  * Remove use of lzma command in favor of xz. (Closes: #599641)
+    + debian/control: Remove lzma from Recommends.
+    + uscan: Use xz to repack lzma tarballs.
+    + uupdate: Use xz to handle lzma-compressed files.
 
   [ Ron Lee ]
   * cowpoke: add a --return option that copies the build results back to a
